--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,10 +4,18 @@ import Navigation from "../components/Navigation.astro";
 import Project from "../components/Project.astro";
 import Layout from "@layouts/Layout.astro";
 import About from "../components/About.astro";
+import Budget from "../components/Budget.astro";
+import Team from "../components/Team.astro";
+import Contact from "../components/Contact.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <Layout title="Welcome to Multiravel Website.">
   <Header />
   <About />
   <Project />
+  <Team />
+  <Budget />
+  <Contact />
+  <Footer />
 </Layout>
