section gallery and project done

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -7,9 +7,10 @@
       src="/assets/portfolio/multirivel.png"
       alt="multiravel"
       class="section-about__img"
+      loading="lazy"
     />
   </div>
-  <div class="section-about__container">
+  <div class="section-title section-about__container">
     <h2>NUESTRA EMPRESA</h2>
     <hr />
     <h3><strong>Multirival Construction SL</strong></h3>
