--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -1,8 +1,14 @@
-<button class="button">
-  <a href="#">Actualidad</a>
-</button>
+<div class="container__button">
+  <button class="button">
+    <a href="#">Actualidad</a>
+  </button>
+</div>
 
 <style>
+  .container__button {
+    margin-top: 50px;
+  }
+
   .button {
     color: #fff;
     background-color: #c92d2d;
