--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,5 @@
 ---
 import Header from "../components/Header.astro";
-import Navigation from "../components/Navigation.astro";
 import Project from "../components/Project.astro";
 import Layout from "@layouts/Layout.astro";
 import About from "../components/About.astro";
@@ -12,10 +11,10 @@ import Footer from "../components/Footer.astro";
 
 <Layout title="Welcome to Multiravel Website.">
   <Header />
-  <About />
-  <Project />
-  <Team />
-  <Budget />
-  <Contact />
-  <Footer />
+  <!-- <About /> -->
+  <!-- <Project /> -->
+  <!-- <Team /> -->
+  <!-- <Budget /> -->
+  <!-- <Contact /> -->
+  <!-- <Footer /> -->
 </Layout>
