--- a/src/components/Gallery.css
+++ b/src/components/Gallery.css
@@ -1,12 +1,34 @@
 .gallery__container {
-  margin: 30px;
+  margin: 60px 30px;
+}
+.center-container {
+  display: grid;
+  place-items: center;
 }
 
-button {
-  background-color: red;
-  padding: 10px 30px;
-  color: white;
+.button-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  grid-gap: 15px;
+  margin-bottom: 60px;
+}
+
+.btn-galery {
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 14px;
+  background-color: #cecece;
+  padding: 12px 24px;
+  letter-spacing: 0.5px;
+  color: var(--text-color-secondary);
   margin: 10px;
+}
+
+.btn-galery:hover,
+.btn-galery.active {
+  background-color: red;
+  color: white;
 }
 
 .container__images {
@@ -17,11 +39,63 @@ button {
 }
 
 .gallery__img {
-  width: auto;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   cursor: pointer;
-  transition: filter 0.5s ease;
+  vertical-align: middle;
+  transition: transform 0.5s ease;
+  overflow: hidden;
+  position: relative;
+  clip-path: polygon(0 2%, 100% 2%, 100% 98%, 0 98%);
 }
 
-.gallery__img:hover {
-  filter: brightness(50%);
+/* Modal gallery */
+
+.modal {
+  display: block;
+  position: fixed;
+  z-index: 99;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.modal-content {
+  margin: 20px auto;
+  display: block;
+  max-width: 90%;
+  max-height: 90vh;
+}
+
+.close {
+  color: #fff;
+  font-size: 40px;
+  font-weight: bold;
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  cursor: pointer;
+}
+
+.prev,
+.next {
+  color: #fff;
+  font-size: 60px;
+  font-weight: bold;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+
+.prev {
+  left: 20px;
+}
+
+.next {
+  right: 20px;
 }
